Got rid of static in methods to promote reuse as is typical of OOP. Refactored methods to be more efficient; some changes were drastic and went from brute force to using other data structures like hash set or hash map. ADDED some new questions/answers as well. Cleaned up answers on console to be more readable.

--- a/Interview/Interview.csproj
+++ b/Interview/Interview.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{0BF2CAA7-7166-48B8-B5F7-992CDA9CD48A}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Interview</RootNamespace>
     <AssemblyName>Interview</AssemblyName>
@@ -28,6 +28,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
